tests/baselines/reference/contextualTyping21.errors.txt
tests/cases/compiler/contextualTyping21.ts(1,36): error TS2322: Type '(数字 | { id: 数字; })[]' is not assignable to type '{ id: 数字; }[]'.
  Type '数字 | { id: 数字; }' is not assignable to type '{ id: 数字; }'.
    Type '数字' is not assignable to type '{ id: 数字; }'.


==== tests/cases/compiler/contextualTyping21.ts (1 errors) ====
    var foo:{id:number;}[] = [{id:1}]; foo = [{id:1}, 1];
                                       ~~~
!!! error TS2322: Type '(数字 | { id: 数字; })[]' is not assignable to type '{ id: 数字; }[]'.
!!! error TS2322:   Type '数字 | { id: 数字; }' is not assignable to type '{ id: 数字; }'.
!!! error TS2322:     Type '数字' is not assignable to type '{ id: 数字; }'.